# nearby-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum  init.sql  package.json
api/: api.postman_collection.json
golang/: .dockerignore  .gitignore  Dockerfile  README.md
golang/api/: swagger.yaml
golang/cmd/nearby/: BUILD.bazel  main.go
golang/cmd/seed/: BUILD.bazel  sqlite.go
golang/internal/config/: BUILD.bazel  environment.go
golang/internal/database/mysql/: BUILD.bazel  connection.go
golang/internal/database/sqlite/: BUILD.bazel  connection.go  seed.go
golang/internal/router/: BUILD.bazel  general.go  health.go  nearby.go  nearby_test.go  ping.go
golang/internal/server/: BUILD.bazel  server.go
typescript/: BUILD.bazel  index.ts  router.ts  types.ts
typescript/database/: mysql.ts
typescript/routes/: health.ts  nearby.ts  ping.ts
