load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nearby_lib",
    srcs = ["main.go"],
    importpath = "github.com/maxicapodacqua/nearby-bazel/golang/cmd/nearby",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/internal/config",
        "//golang/internal/server",
    ],
)

go_binary(
    name = "nearby",
    embed = [":nearby_lib"],
    visibility = ["//visibility:public"],
)
