load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "nearby_lib",
    srcs = ["main.go"],
    importpath = "github.com/maxicapodacqua/nearby-bazel/golang/cmd/nearby",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/internal/config",
        "//golang/internal/server",
    ],
)

go_binary(
    name = "nearby",
    embed = [":nearby_lib"],
    visibility = ["//visibility:public"],
    goarch = "amd64",
    goos = "linux",
)

go_image(
    name = "nearby_image",
    binary = "nearby",
    base = "@golang_base//image",
    format = "Docker",
)
