load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "seed_lib",
    srcs = ["sqlite.go"],
    importpath = "github.com/maxicapodacqua/nearby-bazel/golang/cmd/seed",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/internal/config",
        "//golang/internal/database/sqlite",
    ],
)

go_binary(
    name = "seed",
    embed = [":seed_lib"],
    visibility = ["//visibility:public"],
)
