load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "router",
    srcs = [
        "general.go",
        "health.go",
        "nearby.go",
        "ping.go",
    ],
    importpath = "github.com/maxicapodacqua/nearby-bazel/golang/internal/router",
    visibility = ["//golang:__subpackages__"],
)
