load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/maxicapodacqua/nearby-bazel/golang/internal/server",
    visibility = ["//golang:__subpackages__"],
    deps = [
        "//golang/internal/config",
        "//golang/internal/database/sqlite",
        "//golang/internal/router",
    ],
)
