load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mysql",
    srcs = ["connection.go"],
    importpath = "github.com/maxicapodacqua/nearby-bazel/golang/internal/database/mysql",
    visibility = ["//golang:__subpackages__"],
    deps = [
        "//golang/internal/config",
        "@com_github_go_sql_driver_mysql//:mysql",
    ],
)
