load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqlite",
    srcs = [
        "connection.go",
        "seed.go",
    ],
    importpath = "github.com/maxicapodacqua/nearby-bazel/golang/internal/database/sqlite",
    visibility = ["//golang:__subpackages__"],
    deps = [
        "//golang/internal/config",
        "@org_modernc_sqlite//:sqlite",
    ],
)
